# youtube_transcript_rag

./: README.md  main.py  pyproject.toml  requirements.txt  test.py
backend/: app.py  rag_pipeline.py
