[project]
name = "youtube-video-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.5",
    "ffmpeg-python>=0.2.0",
    "ollama>=0.6.1",
    "openai-whisper>=20250625",
    "qdrant-client>=1.17.1",
    "streamlit>=1.55.0",
    "whisper>=1.1.10",
    "youtube-transcript-api==0.6.2",
    "yt-dlp>=2026.3.17",
]
